# plane-authentik-proxy

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: docker.yml  semver.yml
src/: main.rs
