[package]
name = "plane-authentik-proxy"
version = "0.1.0"
authors = ["XSmeets"]
edition = "2021"
description = "A proxy for Plane and Authentik integration."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
headers = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
