[package]
name = "plane-authentik-proxy"
version = "0.1.0"
authors = ["XSmeets"]
edition = "2021"
description = "A proxy for Plane and Authentik integration."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
headers = "0.4"
axum-extra = { version = "0.12", features = ["typed-header"] }
log = "0.4.28"
env_logger = "0.11.8"
md-5 = "0.10.6"
chrono = "0.4.42"
